# turso

./: .gitignore  CHANGELOG.md  COMPAT.md  CONTRIBUTING.md  CREATE TABLE t(a);  Cargo.toml  Dockerfile.antithesis  Dockerfile.cli  LICENSE.md  Makefile  NOTICE.md  PERF.md  README.md  database  dist-workspace.toml  flake.nix  limbo_output.txt  limbo_sim  pyproject.toml  tursodb
bindings/java/: .editorconfig  .gitignore  .sdkmanrc  Cargo.toml  Makefile  README.md  build.gradle.kts  settings.gradle.kts
bindings/javascript/: .gitignore  .npmignore  .yarnrc.yml  Cargo.toml  Makefile  README.md  bind.js  bind.ts  browser.js  compat.ts  index.d.ts  index.js  package-lock.json  package.browser.json  package.json  promise.cjs  promise.js  promise.mjs  promise.ts  replace.sh  sqlite-error.js  sync.cjs  sync.js  sync.mjs  sync.ts  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  turso.wasi-browser.js  turso.wasi.cjs  wrapper.js
bindings/python/: Cargo.toml  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
bindings/rust/: Cargo.toml  README.md
cli/: Cargo.toml  SQL.sublime-syntax  SQL_syntax_set_dump.packdump  app.rs  build.rs  helper.rs  input.rs  main.rs  mcp_server.rs
cli/commands/: args.rs  import.rs  mod.rs
cli/config/: mod.rs  palette.rs  terminal.rs
cli/docs/: config.md
core/: Cargo.toml  assert.rs  build.rs  error.rs  fast_lock.rs  function.rs  lib.rs  numeric.rs  parameters.rs  pragma.rs  pseudo.rs  result.rs  schema.rs  series.rs  state_machine.rs  types.rs  util.rs  uuid.rs  vtab.rs  vtab_view.rs
core/benches/: benchmark.rs  json_benchmark.rs  mvcc_benchmark.rs  parser_benchmark.rs  tpc_h_benchmark.rs
core/ext/: dynamic.rs  mod.rs  vtab_xconnect.rs
core/functions/: datetime.rs  printf.rs
core/incremental/: compiler.rs  cursor.rs  dbsp.rs  expr_compiler.rs  hashable_row.rs  mod.rs  operator.rs  persistence.rs  view.rs
core/io/: clock.rs  generic.rs  io_uring.rs  memory.rs  mod.rs  unix.rs  vfs.rs  windows.rs
core/json/: cache.rs  error.rs  json_cache.rs  json_operations.rs  jsonb.rs  mod.rs  ops.rs  path.rs  vtab.rs
core/mvcc/: cursor.rs  mod.rs
core/numeric/: mod.rs  nonnan.rs
core/parser/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  token.rs
core/storage/: btree.rs  buffer_pool.rs  checksum.rs  database.rs  encryption.rs  header_accessor.rs  mod.rs  page_bitmap.rs  page_cache.rs  pager.rs  slot_bitmap.rs  sqlite3_ondisk.rs  state_machines.rs  wal.rs
core/time/: internal.rs  mod.rs
core/translate/: aggregation.rs  alter.rs  analyze.rs  attach.rs  collate.rs  compound_select.rs  delete.rs  display.rs  emitter.rs  expr.rs  group_by.rs  index.rs  insert.rs  integrity_check.rs  logical.rs  main_loop.rs  mod.rs  optimizer.rs  order_by.rs  plan.rs  planner.rs  pragma.rs  result_row.rs  rollback.rs  schema.rs  select.rs  subquery.rs  transaction.rs  update.rs  upsert.rs  values.rs  view.rs
core/vdbe/: builder.rs  execute.rs  explain.rs  insn.rs  likeop.rs  metrics.rs  mod.rs  sorter.rs  vdbe_blob.rs
core/vector/: distance.rs  mod.rs  vector_types.rs
extensions/completion/: Cargo.toml
extensions/core/: Cargo.toml  README.md
extensions/crypto/: Cargo.toml
extensions/ipaddr/: Cargo.toml
extensions/kvstore/: Cargo.toml
extensions/percentile/: Cargo.toml
extensions/regexp/: Cargo.toml  build.rs
extensions/series/: Cargo.toml
extensions/tests/: Cargo.toml
extensions/uuid/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cast_real.rs  expression.rs  schema.rs
parser/: Cargo.toml  build.rs
parser/benches/: parser_benchmark.rs
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
simulator/: .gitignore  Cargo.toml  README.md  main.rs
simulator/generation/: expr.rs  mod.rs  plan.rs  predicate.rs  property.rs  query.rs  table.rs
simulator/model/: mod.rs  table.rs
simulator/profiles/: io.rs  mod.rs  query.rs
simulator/runner/: bugbase.rs  cli.rs  clock.rs  differential.rs  doublecheck.rs  env.rs  execution.rs  file.rs  io.rs  mod.rs  watch.rs
simulator/shrink/: plan.rs
sql_generation/: Cargo.toml  lib.rs
sql_generation/generation/: expr.rs  mod.rs  opts.rs  plan.rs  property.rs  query.rs  table.rs
sql_generation/model/: table.rs
sqlite3/: Cargo.toml  README.md  build.rs
sqlite3/include/: sqlite3.h
sqlite3/src/: lib.rs
sqlite3/tests/: Makefile  main.c  sqlite3_tests.c  test-wal.c
stress/: Cargo.toml  Dockerfile.antithesis-config  docker-compose.yaml  main.rs  opts.rs
testing/: README.md  affinity.test  agg-functions.test  all.test  alter_column.test  alter_table.test  analyze.test  attach.test  boolean.test  collate.test  compare.test  create_table.test  default_value.test  delete.test  drop_index.test  drop_table.test  extensions.py  gen-bigass-database.py  gen-database.py  glob.test  groupby.test  insert.test  integrity_check.test  join.test  json.test  like.test  literal.test  materialized_views.test  math.test  null.test  orderby.test  pragma.test  pyproject.toml  rollback.test  scalar-functions-datetime.test  scalar-functions.test  select.test  subquery.test  tester.tcl  testing.db  (+11 more)
testing/cli_tests/: cli_test_cases.py  collate.py  console.py  constraint.py  extensions.py  memory.py  mvcc.py  sqlite_bench.py  test_limbo_cli.py  test_turso_cli.py  update.py  vfs_bench.py  write.py  writes.py
testing/javascript/: package-lock.json  package.json
testing/sqlite3/: all.test  alter.test  alter2.test  alter3.test  alter4.test  func.test  func4.test  func5.test  func6.test  func8.test  insert.test  insert2.test  insert3.test  insert4.test  insert5.test  join.test  select1.test  select2.test  select3.test  select4.test  select5.test  select6.test  select7.test  select8.test  select9.test  selectA.test  selectB.test  selectC.test  selectD.test  selectE.test  selectF.test  selectG.test  selectH.test  tester.tcl
testing/sqlite_test_ext/: Cargo.toml  build.rs
testing/test_files/: test_w_header.csv
testing/unreliable-libc/: Makefile  file.c
tests/: Cargo.toml
tests/integration/: common.rs  mod.rs  pragma.rs
whopper/: Cargo.toml  io.rs  main.rs
(+457 files in other folders)
