# Copyright 2023-2025 the Limbo authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
    "bindings/dart/rust",
    "bindings/go",
    "bindings/java",
    "bindings/javascript",
    "bindings/python",
    "bindings/rust",
    "cli",
    "core",
    "extensions/completion",
    "extensions/core",
    "extensions/crypto",
    "extensions/csv",
    "extensions/ipaddr",
    "extensions/percentile",
    "extensions/regexp",
    "extensions/tests",
    "macros",
    "simulator",
    "sqlite3",
    "stress",
    "testing/sqlite_test_ext",
    "tests",
    "vendored/sqlite3-parser/sqlparser_bench",
    "packages/turso-sync",
    "packages/turso-sync-engine",
    "packages/turso-sync-js",
]
exclude = ["perf/latency/limbo"]

[workspace.package]
version = "0.1.4-pre.5"
authors = ["the Limbo authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/turso"

[workspace.dependencies]
turso = { path = "bindings/rust", version = "0.1.4-pre.5" }
turso_node = { path = "bindings/javascript", version = "0.1.4-pre.5" }
limbo_completion = { path = "extensions/completion", version = "0.1.4-pre.5" }
turso_core = { path = "core", version = "0.1.4-pre.5" }
turso_sync_engine = { path = "packages/turso-sync-engine", version = "0.1.4-pre.5" }
limbo_crypto = { path = "extensions/crypto", version = "0.1.4-pre.5" }
limbo_csv = { path = "extensions/csv", version = "0.1.4-pre.5" }
turso_ext = { path = "extensions/core", version = "0.1.4-pre.5" }
turso_ext_tests = { path = "extensions/tests", version = "0.1.4-pre.5" }
limbo_ipaddr = { path = "extensions/ipaddr", version = "0.1.4-pre.5" }
turso_macros = { path = "macros", version = "0.1.4-pre.5" }
limbo_percentile = { path = "extensions/percentile", version = "0.1.4-pre.5" }
limbo_regexp = { path = "extensions/regexp", version = "0.1.4-pre.5" }
turso_sqlite3_parser = { path = "vendored/sqlite3-parser", version = "0.1.4-pre.5" }
limbo_uuid = { path = "extensions/uuid", version = "0.1.4-pre.5" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.98"
mimalloc = { version = "0.1.47", default-features = false }

[profile.release]
debug = "line-tables-only"
codegen-units = 1
panic = "abort"
lto = true

[profile.antithesis]
inherits = "release"
debug = true
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
