# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[package]
authors.workspace = true
default-run = "limbo"
description = "The Limbo interactive SQL shell"
edition.workspace = true
license.workspace = true
name = "limbo_cli"
repository.workspace = true
version.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "limbo"
path = "main.rs"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1.4"
dirs = "5.0.1"
env_logger = "0.10.1"
limbo_core = { path = "../core", default-features = true, features = [
    "completion",
] }
rustyline = { version = "15.0.0", default-features = true, features = [
    "derive",
] }
ctrlc = "3.4.4"
csv = "1.3.1"
miette = { version = "7.4.0", features = ["fancy"] }
cfg-if = "1.0.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
syntect = "5.2.0"


[features]
default = ["io_uring"]
io_uring = ["limbo_core/io_uring"]

[build-dependencies]
syntect = "5.2.0"

