# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[package]
authors.workspace = true
default-run = "limbo"
description = "The Limbo interactive SQL shell"
edition.workspace = true
license.workspace = true
name = "limbo_cli"
repository.workspace = true
version.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "limbo"
path = "main.rs"


[dependencies]
anyhow = "1.0.75"
cfg-if = "1.0.0"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = { version = "=4.5.47", features = ["unstable-dynamic"] }
comfy-table = "7.1.4"
csv = "1.3.1"
ctrlc = "3.4.4"
dirs = "5.0.1"
env_logger = "0.10.1"
libc = "0.2.172"
limbo_core = { path = "../core", default-features = true, features = [
    "completion",
] }
miette = { version = "7.4.0", features = ["fancy"] }
nu-ansi-term = {version = "0.50.1", features = ["serde", "derive_serde_style"]}
rustyline = { version = "15.0.0", default-features = true, features = [
    "derive",
] }
shlex = "1.3.0"
syntect = "5.2.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = {version = "0.8.20", features = ["preserve_order"]}
schemars = {version = "0.8.22", features = ["preserve_order"]}
serde = {version = "1.0.218", features = ["derive"]}
validator = {version = "0.20.0", features = ["derive"]}
toml_edit = {version = "0.22.24", features = ["serde"]}

[features]
default = ["io_uring"]
io_uring = ["limbo_core/io_uring"]

[build-dependencies]
syntect = "5.2.0"
