[package]
name = "limbo-fuzz"
version = "0.0.0"
authors = ["the Limbo authors"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.1", features = ["derive"] }
limbo_core = { path = "../core", features = ["fuzz"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "expression"
path = "fuzz_targets/expression.rs"

[[bin]]
name = "cast_real"
path = "fuzz_targets/cast_real.rs"
