# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_sim"
version.workspace = true
authors.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "The Limbo deterministic simulator"
publish = false

[[bin]]
name = "limbo_sim"
path = "main.rs"

[dependencies]
turso_core = { path = "../core", features = ["simulator"]}
rand = { workspace = true }
rand_chacha = "0.9.0"
log = "0.4.20"
env_logger = "0.10.1"
regex = "1.11.1"
regex-syntax = { version = "0.8.5", default-features = false, features = [
    "unicode",
] }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
notify = "8.0.0"
rusqlite.workspace = true
dirs = "6.0.0"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow.workspace = true
hex = "0.4.3"
itertools = "0.14.0"
sql_generation = { workspace = true }
turso_parser = { workspace = true }
schemars = { workspace = true }
garde = { workspace = true, features = ["derive", "serde"] }
json5 = { version = "0.4.1" }
strum = { workspace = true }
parking_lot = { workspace = true }
