# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "turso_sqlite3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[features]
capi = []
lfs = []
sqlite3 = []

[package.metadata.dist]
dist = true

[lib]
doc = false
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
env_logger = { version = "0.11.3", default-features = false }
libc = "0.2.169"
turso_core = { path = "../core" }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8.0"

[package.metadata.capi.header]
name = "sqlite3.h"

[[test]]
name = "compat"
path = "tests/compat/mod.rs"

[build-dependencies]
