# Copyright 2025 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo stress tester"
publish = false

[[bin]]
name = "limbo_stress"
path = "main.rs"

[dependencies]
antithesis_sdk = "0.2.5"
clap = { version = "4.5", features = ["derive"] }
limbo = { path = "../bindings/rust" }
tokio = { version = "1.29.1", features = ["full"] }
anarchist-readable-name-generator-lib = "0.1.0"
hex = "0.4"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.20.0"
