# Copyright 2025 the Limbo authors. All rights reserved. MIT license.

[package]
name = "turso_stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Limbo stress tester"
publish = false

[[bin]]
name = "turso_stress"
path = "main.rs"

[features]
default = ["experimental_indexes"]
antithesis = ["turso/antithesis"]
experimental_indexes = []

[dependencies]
anarchist-readable-name-generator-lib = "0.1.0"
antithesis_sdk = "0.2.5"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
tempfile = "3.20.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
turso = { path = "../bindings/rust" }
