[project]
description = "Limbo Python Testing Project"
name = "limbo_test"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = ["faker>=37.1.0", "pydantic>=2.11.1", "rich>=14.0.0"]

[project.scripts]
test-writes = "cli_tests.writes:main"
test-shell = "cli_tests.cli_test_cases:main"
test-extensions = "cli_tests.extensions:main"

[tool.uv]
package = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["cli_tests"]

[tool.hatch.metadata]
allow-direct-references = true
