[package]
name = "core_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration & fuzz tests"

[lib]
path = "lib.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[dependencies]
anyhow.workspace = true
env_logger = "0.10.1"
turso_core = { path = "../core", features = ["conn_raw_api"] }
turso = { path = "../bindings/rust", features = ["conn_raw_api"] }
tokio = { version = "1.47", features = ["full"] }
rusqlite.workspace = true
tempfile = "3.0.7"
log = "0.4.22"
assert_cmd = "^2"
rand_chacha = "0.9.0"
rand = "0.9.0"
zerocopy = "0.8.26"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
