[package]
name = "turso_node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Turso database library Node bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
turso_core = { workspace = true }
napi = { version = "2.16.17", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.16.13", default-features = true }

[build-dependencies]
napi-build = "2.2.0"
