[package]
name = "turso_node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Turso database library Node bindings"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
turso_core = { workspace = true }
napi = { version = "3.1.3", default-features = false, features = ["napi6"] }
napi-derive = { version = "3.1.1", default-features = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
napi-build = "2.2.3"
