# Copyright 2025 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Limbo Rust API"

[features]
index_experimental = ["limbo_core/index_experimental"]

[dependencies]
limbo_core = { workspace = true, features = ["io_uring"] }
thiserror = "2.0.9"

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.29.1", features = ["full"] }
