# Copyright 2025 the Turso authors. All rights reserved. MIT license.

[package]
name = "turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Turso Rust API"

[features]
default = ["futures"]
experimental_indexes = []
antithesis = ["turso_core/antithesis"]
futures = ["dep:futures-util"]

[dependencies]
turso_core = { workspace = true, features = ["io_uring"] }
thiserror = "2.0.9"
futures-util = { version = "0.3.31", optional = true, default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.29.1", features = ["full"] }
