# Copyright 2025 the Turso authors. All rights reserved. MIT license.

[package]
name = "turso"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Turso Rust API"

[features]
default = ["experimental_indexes"]
experimental_indexes = []
antithesis = ["turso_core/antithesis"]

[dependencies]
turso_core = { workspace = true, features = ["io_uring"] }
thiserror = "2.0.9"

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
