[package]
name = "limbo_completion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Limbo completion extension"

[dependencies]
limbo_ext = { workspace = true, features = ["static"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[lib]
crate-type = ["cdylib", "lib"]

[features]
static = ["limbo_ext/static"]
