[package]
name = "turso_ext"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Limbo extensions core"

[features]
vfs = []
core_only = []
static = []

[dependencies]
turso_macros = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom = "0.3.1"
chrono = "0.4.40"
