[package]
name = "limbo_percentile"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Limbo percentile extension"

[lib]
crate-type = ["cdylib", "lib"]

[features]
static = ["turso_ext/static"]

[dependencies]
turso_ext = { workspace = true, features = ["static"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
